Fri Apr 22 23:02:33 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/FtRtEvent/EventChannel/Dynamic_Bitset.h
	* orbsvcs/orbsvcs/FtRtEvent/EventChannel/Dynamic_Bitset.inl:
	* orbsvcs/orbsvcs/FtRtEvent/EventChannel/Dynamic_Bitset.cpp
	  (Dynamic_Bitset):

	  Reordered class attributes to fix "variable is used
	  uninitialized" ("is" not "may be"!) g++ 4.0 warning.

Fri Apr 22 22:49:13 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/LoadBalancing/LB_LoadMinimum.cpp
	  (analyze_loads):
	* orbsvcs/orbsvcs/LoadBalancing/LB_LoadAverage.cpp
	  (analyze_loads):

	  Fixed "variable may be used uninitialized" g++ 4.0 warnings.  In
	  this case, the variable was indeed used undefined!

Fri Apr 22 20:00:28 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* docs/rtcorba/features.html:

	  Fix typo.

	* orbsvcs/IFR_Service/Makefile.am

	  Regenerate.

Fri Apr 22 16:30:16 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/IFR_Service/IFR_Service.mpc:

          Added imr_client to base project list, IFR_Service executable
          needs to link to the ImR_Client library.

Fri Apr 22 20:32:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/DomainA.cpp:
          Regenerated this file

Fri Apr 22 12:17:09 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* orbsvcs/ImplRepo_Service/Adapter_Activator.h (ImR_Adapter):
	* orbsvcs/ImplRepo_Service/Forwarder.h (ImR_Forwarder):
	* orbsvcs/ImplRepo_Service/INS_Locator.h (INS_Locator):

	  Inherit from CORBA::LocalObject.  The C++ mapping requires that
	  implementations of locality constrained objects do so.

	* orbsvcs/ImplRepo_Service/ImR_Locator_i.cpp (~ImR_Locator_i):
	* orbsvcs/ImplRepo_Service/ImR_Locator_i.h (~ImR_Locator_i):

	  Added an out-of-line destructor.  For some reason g++ 4.0 needs
	  this out-of-line destructor instead of the default one generated
	  by the compiler.  Without this destructor, we get a number of